Fixed image bug when displaying list, name bug in manage list, overflow of total price

--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -74,6 +74,8 @@ ul.products {
     border: 0;
     max-height: 100px;
     max-width: 100px;
+    min-width: 100px;
+    min-height: 100px;
 }
 
 .media, .media-body {
