--- a/Web/public/css/navbar.css
+++ b/Web/public/css/navbar.css
@@ -78,5 +78,5 @@ li.greeting {
     position: relative;
     display: block;
     margin-top: 103px;
-    padding: 12px;
+    padding: 16px;
 }
